# gokit

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: benchmark.yml  ci.yml
_sources/about/: index.rst.txt
_sources/advanced/: index.rst.txt
_sources/frequently_asked_questions/: index.rst.txt
about/: index.html
advanced/: index.html
benchmarks/: baseline.json  gate_config.json
change_log/: index.html
docs/: IMPLEMENTATION_PLAN.md  MIGRATION.md  PLAN.md  RELEASE.md  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/about/: index.doctree
docs/_build/html/: index.html
docs/_build/html/_sources/: index.rst.txt
docs/_templates/: sidebar-top.html
docs/about/: index.rst
docs/advanced/: index.rst
docs/change_log/: index.rst
docs/frequently_asked_questions/: index.rst
examples/data/realistic_plots/: all_studies.tsv  semantic_similarity.tsv
frequently_asked_questions/: index.html
src/gokit/: __init__.py
src/gokit/cache/: __init__.py  obo_cache.py
src/gokit/cli/: __init__.py  aliases.py  benchmark.py  cache.py  common.py  download.py  enrich.py  explain.py  main.py  plot.py  report.py  validate.py
src/gokit/core/: __init__.py  enrichment.py  idnorm.py  manifest.py  propagation.py  semantic.py  stats.py
src/gokit/io/: __init__.py  assoc.py  obo.py  study.py
src/gokit/report/: __init__.py  figures.py  parquet_writer.py  writers.py
tests/: test_assoc_formats.py  test_batch_mode.py  test_benchmark_smoke.py  test_cli_smoke.py  test_core_stats.py  test_download.py  test_enrich_assoc_formats.py  test_enrich_emit_plots.py  test_enrich_integration.py  test_enrich_propagation.py  test_figures_data.py  test_golden_fixtures.py  test_grouped_summary.py  test_id_type.py  test_obo_cache.py  test_propagation.py  test_report.py  test_runner_cache.py  test_semantic_filters.py  test_semantic_metrics.py  test_store_items.py
tools/: check_benchmark.py  release_pypi.sh
(+25 files in other folders)
