[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "gokit"
version = "0.1.0"
description = "Command-line toolkit for GO enrichment analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "GOKIT Contributors"}
]
dependencies = []

[project.optional-dependencies]
io = [
  "pyarrow>=16.0"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]

[project.scripts]
gokit = "gokit.cli.main:main"
gk_enrich = "gokit.cli.aliases:enrich_main"
gk_validate = "gokit.cli.aliases:validate_main"
gk_benchmark = "gokit.cli.aliases:benchmark_main"
gk_cache = "gokit.cli.aliases:cache_main"
gk_explain = "gokit.cli.aliases:explain_main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
