[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "gokit"
version = "0.1.2"
description = "Command-line toolkit for GO enrichment analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "GOKIT Contributors"}
]
dependencies = []

[project.optional-dependencies]
io = [
  "pyarrow>=16.0"
]
plot = [
  "matplotlib>=3.8",
  "pypubfigs>=1.1.3",
  "networkx>=3.3"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]

[project.scripts]
gokit = "gokit.cli.main:main"
gk_enrich = "gokit.cli.aliases:enrich_main"
gk_validate = "gokit.cli.aliases:validate_main"
gk_explain = "gokit.cli.aliases:explain_main"
gk_plot = "gokit.cli.aliases:plot_main"
gk_download = "gokit.cli.aliases:download_main"
gk_report = "gokit.cli.aliases:report_main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
